--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <title>Todo App</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700" >
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
       </li>
     </ul>
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
