--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="aaa">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
@@ -34,7 +34,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove">
           </button>
         </li>
         <li class="editMode">
@@ -43,7 +43,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
@@ -58,7 +58,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
