--- a/index.html
+++ b/index.html
@@ -20,44 +20,43 @@
     <section class="add__task">
       <h3 class="add__task_title">Add Item</h3>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input class="task add__task_input" type="text">
+        <button class="add__task_button">Add</button>
       </div>
     </section>
 
     <section class="todo">    
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul class="todo__incompleted">
         <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="task todo__label">Pay Bills</label>
+          <input type="text" class="task todo__input">
+          <button class="todo__edit_btn">Edit</button>
+          <button class="todo__delete">
             <img src="./remove.svg" alt="Remove">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+        <li class="todo__edit_mode">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="task todo__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task todo__input">
+          <button class="todo__edit_btn">Save</button>
+          <button class="todo__delete">
             <img src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
-    </section>
 
-    <section class="completed">
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      
+      <ul class="todo__completed">
         <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <input class="todo__checkbox" type="checkbox" checked>
+          <label class="task todo__label">See the Doctor</label>
+          <input type="text" class="task todo__input">
+          <button class="todo__edit_btn">Edit</button>
+          <button class="todo__delete">
             <img src="./remove.svg" alt="Remove">
           </button>
         </li>
