refactor(extended-2.2): use BEM notation

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
 
-  <header class="aaa">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="header__inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
-  <main class="centered-main-page-element">
+  <main class="app__todo">
 
     <section class="add__task">
       <h3 class="add__task_title">Add Item</h3>
-      <div class="task-row-wrapper">
+      <div class="add__task_wrapper">
         <input class="task add__task_input" type="text">
         <button class="add__task_button">Add</button>
       </div>
