refactor(basic-3.4):  do not use tag selectors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="header__inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
@@ -26,7 +26,7 @@
     </section>
 
     <section class="todo">    
-      <h3>Todo</h3>
+      <h3 class="todo__title">Todo</h3>
       <ul class="todo__incompleted">
         <li>
           <input class="todo__checkbox" type="checkbox">
@@ -34,7 +34,7 @@
           <input type="text" class="task todo__input">
           <button class="todo__edit_btn">Edit</button>
           <button class="todo__delete">
-            <img src="./remove.svg" alt="Remove">
+            <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
         <li class="todo__edit_mode">
@@ -43,12 +43,12 @@
           <input type="text" value="Go Shopping" class="task todo__input">
           <button class="todo__edit_btn">Save</button>
           <button class="todo__delete">
-            <img src="./remove.svg" alt="Remove">
+            <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
 
-      <h3>Completed</h3>
+      <h3 class="todo__title">Completed</h3>
       
       <ul class="todo__completed">
         <li>
@@ -57,7 +57,7 @@
           <input type="text" class="task todo__input">
           <button class="todo__edit_btn">Edit</button>
           <button class="todo__delete">
-            <img src="./remove.svg" alt="Remove">
+            <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
