--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section class="add__task">
       <h3 class="add__task_title">Add Item</h3>
       <div class="add__task_wrapper">
-        <input class="task add__task_input" type="text">
-        <button class="add__task_button">Add</button>
+        <input class="add__task_input" type="text">
+        <button class="add__task_btn">Add</button>
       </div>
     </section>
 
@@ -30,19 +30,19 @@
       <ul class="todo__incompleted">
         <li>
           <input class="todo__checkbox" type="checkbox">
-          <label class="task todo__label">Pay Bills</label>
-          <input type="text" class="task todo__input">
+          <label class="todo__label">Pay Bills</label>
+          <input class="todo__input" type="text">
           <button class="todo__edit_btn">Edit</button>
-          <button class="todo__delete">
+          <button class="todo__delete_btn">
             <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
         <li class="todo__edit_mode">
           <input class="todo__checkbox" type="checkbox">
-          <label class="task todo__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task todo__input">
+          <label class="todo__label">Go Shopping</label>
+          <input class="todo__input" type="text" value="Go Shopping">
           <button class="todo__edit_btn">Save</button>
-          <button class="todo__delete">
+          <button class="todo__delete_btn">
             <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
@@ -53,10 +53,10 @@
       <ul class="todo__completed">
         <li>
           <input class="todo__checkbox" type="checkbox" checked>
-          <label class="task todo__label">See the Doctor</label>
-          <input type="text" class="task todo__input">
+          <label class="todo__label">See the Doctor</label>
+          <input class="todo__input" type="text">
           <button class="todo__edit_btn">Edit</button>
-          <button class="todo__delete">
+          <button class="todo__delete_btn">
             <img class="todo__delete_img" src="./remove.svg" alt="Remove">
           </button>
         </li>
